<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/device_datetime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/cardview_dark_background"
            android:text="@string/device_system_datetime"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="@dimen/_250sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/date_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:hint="@string/date_time_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayout2"
            android:layout_below="@+id/textInputLayout2"
            android:id="@+id/textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/time_Txt"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:drawableRight="@android:drawable/ic_lock_idle_alarm"
                android:hint="@string/time_label" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_update_action"
            style="@style/AppButtonTheme"
            android:layout_width="@dimen/_250sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:text="@string/btn_label_update"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>